changes the name in package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "indecisionApp",
+    "name": "indecisionapp",
     "version": "1.0.0",
     "main": "index.js",
     "author": "Steven Barry",
