--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "scripts": {
         "serve": "live-server public",
-        "build": "webpack --watch",
-        "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+        "build": "webpack",
+        "dev-server": "webpack-dev-server"
     },
     "dependencies": {
         "babel-cli": "^6.24.1",
@@ -20,6 +20,7 @@
         "react-dom": "^16.0.0",
         "validator": "^8.0.0",
         "webpack": "^4.17.1",
-        "webpack-cli": "^3.1.0"
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.1.7"
     }
 }
