--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "live-server": "^1.2.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
+        "react-modal": "^3.5.1",
         "validator": "^8.0.0",
         "webpack": "^4.17.1",
         "webpack-cli": "^3.1.0",
