--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Steven Barry",
     "license": "MIT",
     "scripts": {
-        "serve": "live-server public",
+        "serve": "live-server public/",
         "build": "webpack",
         "dev-server": "webpack-dev-server"
     },
@@ -19,6 +19,7 @@
         "css-loader": "^1.0.0",
         "live-server": "^1.2.0",
         "node-sass": "^4.9.3",
+        "normalize.css": "^8.0.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
         "react-modal": "^3.5.1",
